calculos/basic_calc.h

#ifndef BASIC_CALC_H
#define BASIC_CALC_H

extern "C"{
    float sum(float a, float b);
    float subtration(float a, float b);
    float product(float a, float b);
    float division(float a, float b);
}

#endif